<resources>
    <string name="app_name">Faruq Traders</string>
    <string name="product_name">Product Name:</string>
    <string name="demo_product_name">Demo Product Name</string>
    <string name="category">Category:</string>
    <string name="honey_and_jam_spread">Honey and Jam Spread</string>
    <string name="price">1057.3৳</string>
    <string name="category_name">honey_and_jam_spread</string>
    <string name="related_products">Related Products</string>
    <string name="add_to_cart_btn">Add to Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sale_product">Sale Product</string>
    <string name="feature_product">Feature Product</string>
    <string name="latest_product">Latest Product</string>
    <string name="best_selling">Best Selling</string>
    <string name="top_in_categories">Top in Categories</string>
    <string name="more_products">More Products</string>
    <string name="peoples_are_also_looking_for">Peoples Are Also Looking For</string>
    <string name="more">More</string>
    <string name="search_product">Search Product</string>
    <string name="sing_in">Sing In</string>
    <string name="or">OR</string>
    <string name="sign_in_with_social_account">Sign in with social account</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="password">Password</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="lost_your_password">Lost your password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="already_have_account">Already have an account? Sign Up</string>
    <string name="guest_user">Guest User</string>
    <string name="guest_email">guest@gmail.com</string>
    <string name="cart">Cart</string>
    <string name="my_cart_list">My Cart List</string>
    <string name="grand_total">Grand Total:</string>
    <string name="check_out">Check Out</string>
    <string name="about_us">About Us</string>
    <string name="categories">Categories</string>
    <string name="contact_us">Contact Us</string>
    <string name="got_question">Got Question? Call us 24/7</string>
    <string name="cell">+8801772333793</string>
    <string name="shop_address">Shop#9,1st Floor,Dncc Paka Market,Gulshan-1,Dhaka,Bangladesh</string>
    <string name="product_details_title">Product Details</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="quantity">Quantity:</string>
    <string name="title">Here will Come Category Name</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="next">Next ...</string>
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="order">Order</string>
    <string name="wishlist">Wishlist</string>
    <string name="confirm_new_password">Confirm New Password</string>
</resources>