<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="24dp"
            android:layout_gravity="center_horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_to_continue"
                android:textColor="@color/yellow"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                />

            <EditText
                android:id="@+id/loginNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_input"
                android:hint="@string/number"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="15dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/loginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"
                android:hint="@string/password"
                android:drawableStart="@drawable/password"
                android:drawablePadding="15dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:animateLayoutChanges="true">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/sing_in"
                    android:background="@drawable/button_background"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="35dp"
                    android:layout_height="27dp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </FrameLayout>

            <TextView
                android:id="@+id/lostYourPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lost_your_password"
                android:textSize="12sp"
                android:gravity="end"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="10dp"
                >

                <View
                    android:layout_width="30dp"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="@color/black"
                    />
                <View
                    android:layout_width="30dp"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_social_account"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/facebookLogin"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/facebook"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/googleLogin"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/google"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/textCreateNewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>