<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="24dp"
            android:layout_gravity="center_horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_marginTop="30dp"
                />

            <EditText
                android:id="@+id/fullNameEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_input"
                android:hint="@string/full_name"
                android:drawableStart="@drawable/person"
                android:drawablePadding="15dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                />
            <EditText
                android:id="@+id/signUpEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"
                android:hint="@string/email"
                android:drawableStart="@drawable/email"
                android:drawablePadding="15dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                />

            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"
                android:hint="@string/number"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="15dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                />

            <EditText
                android:id="@+id/signupPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"
                android:hint="@string/password"
                android:drawableStart="@drawable/password"
                android:drawablePadding="15dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                />
            <EditText
                android:id="@+id/signupConfirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"
                android:hint="@string/confirm_password"
                android:drawableStart="@drawable/password"
                android:drawablePadding="15dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:animateLayoutChanges="true">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signupButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/sing_up"
                    android:background="@drawable/button_background"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    />

            </FrameLayout>

            <TextView
                android:id="@+id/haveAccountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />


        </LinearLayout>

    </ScrollView>

    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/category_imageBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/back"
                android:tint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="Login"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack" />

        </androidx.constraintlayout.widget.ConstraintLayout>






    </RelativeLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>