<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AccountDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/back"
                android:tint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Account Details"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/constraint_layout"
            android:padding="30dp">

            <!--Use here scroll view and inside scroll view use Linear Layout for next design-->

            <EditText
                android:id="@+id/updateNameEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/person"
                android:drawablePadding="15dp"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textAutoCorrect"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/updateEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/email"
                android:drawablePadding="15dp"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updateNameEditText" />

            <EditText
                android:id="@+id/updatePhoneEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="15dp"
                android:hint="@string/number"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updateEmailEditText" />


            <EditText
                android:id="@+id/updateAddressEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/location"
                android:drawablePadding="15dp"
                android:hint="@string/address"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textAutoCorrect"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updatePhoneEditText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveChangesButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_background"
                android:text="Save Changes"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updateAddressEditText" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>